--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-
 <head>
+  <title>Social Bubble</title>
   <link rel="shortcut icon" href="https://www.vippng.com/png/full/450-4509338_freetoedit-frame-circle-blue-bubble-circle.png" />
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
