--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 
 <body>
-	<script src="script.js">
-
-	</script>
+	<ul>
+  	<li><a class="active" href="index.html">Home</a></li>
+  	<li><a href="page2.html">News</a></li>
+  	<li><a href="page3.html">Contact</a></li>
+  	<li><a href="#about">About</a></li>
+	</ul>
 </body>
