Menu en pagina's verbeterd

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Social Bubble</title>
+  <title>Index</title>
   <link rel="shortcut icon" href="https://www.vippng.com/png/full/450-4509338_freetoedit-frame-circle-blue-bubble-circle.png" />
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+	<h1>Title</h1>
+
 	<ul>
   	<li><a class="active" href="index.html">Home</a></li>
   	<li><a href="page2.html">News</a></li>
