Namen pagina's toegevoegd

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
   <title>Index</title>
-  <link rel="shortcut icon" href="https://www.vippng.com/png/full/450-4509338_freetoedit-frame-circle-blue-bubble-circle.png" />
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>repl.it</title>
@@ -10,12 +9,13 @@
 </head>
 
 <body>
-	<h1>Title</h1>
+	<h1>Social Bubble</h1>
 
 	<ul>
   	<li><a class="active" href="index.html">Home</a></li>
-  	<li><a href="page2.html">News</a></li>
-  	<li><a href="page3.html">Contact</a></li>
-  	<li><a href="#about">About</a></li>
+  	<li><a href="page2.html">Information</a></li>
+  	<li><a href="page3.html">Movie</a></li>
+  	<li><a href="#Contact">Contact</a></li>
+		<li><a href="#about us">About us</a></li>
 	</ul>
 </body>
