--- a/page2.html
+++ b/page2.html
@@ -10,12 +10,14 @@
 </head>
 
 <body>
-	<h1>Title</h1>
+	<h1>Social Bubble</h1>
 
 	<ul>
   	<li><a href="index.html">Home</a></li>
-  	<li><a class="active" href="page2.html">News</a></li>
-  	<li><a href="page3.html">Contact</a></li>
-  	<li><a href="#about">About</a></li>
+  	<li><a class="active" href="page2.html">Information</a></li>
+		
+  	<li><a href="page3.html">Movie</a></li>
+  	<li><a href="#Contact">Contact</a></li>
+		<li><a href="#About us">About us</a></li>
 	</ul>
 </body>
