Favicon bestand toegevoegd & gewijzigd zodat deze weer werkte.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Index</title>
+  <link rel='icon' href='download.jpeg' type='image/x-icon'/ >
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>repl.it</title>
