Ik heb ervoor gezorgd dat je op alle pagina's kan klikken.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Index</title>
+  <title>Social Bubble</title>
   <link rel='icon' href='download.jpeg' type='image/x-icon'/ >
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
