--- a/page2.html
+++ b/page2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Social Bubble</title>
+  <title>Page 2</title>
   <link rel="shortcut icon" href="https://www.vippng.com/png/full/450-4509338_freetoedit-frame-circle-blue-bubble-circle.png" />
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
@@ -15,9 +15,8 @@
 	<ul>
   	<li><a href="index.html">Home</a></li>
   	<li><a class="active" href="page2.html">Information</a></li>
-
   	<li><a href="page3.html">Movie</a></li>
-  	<li><a href="#Contact">Contact</a></li>
-		<li><a href="#About us">About us</a></li>
+  	<li><a href="page4.html">Contact</a></li>
+		<li><a href="page5.html">About us</a></li>
 	</ul>
 </body>
