--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Social Bubble</title>
-  <link rel='icon' href='download.jpeg' type='image/x-icon'/ >
+  <link rel='icon' href='soap_bubbles_PNG37.png'/>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>repl.it</title>
