Favicon op alle pagina's gezet & titel's van elke pagina veranderd.

--- a/page4.html
+++ b/page4.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Page 4</title>
-  <link rel="shortcut icon" href="https://www.vippng.com/png/full/450-4509338_freetoedit-frame-circle-blue-bubble-circle.png" />
+  <title>Contact</title>
+  <link rel='icon' href='soap_bubbles_PNG37.png'/>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>repl.it</title>
