Verbeteringen voor responsive design

--- a/page2.html
+++ b/page2.html
@@ -12,48 +12,50 @@
 <body>
 	<h1>Social Bubble</h1>
 
-	<ul>
+	<ul class="menu">
   	<li><a href="index.html">Home</a></li>
   	<li><a class="active" href="page2.html">Information</a></li>
   	<li><a href="page3.html">Movie</a></li>
   	<li><a href="page4.html">Contact</a></li>
 		<li><a href="page5.html">About us</a></li>
 	</ul>
+<div class="inhoud">
+	<h2> What is a social bubble?</h2>
+	<p>The term “social bubble”, also called filter bubble, is a term introduced by Mr. Pariser. The internet activist used this term in the book “The filter bubble” he wrote. In this book, he wrote about the concerns he had about filter bubbles that appear in search engines and social networks. For example, he stated that it is crucial for democracy to be able to view things from different perspectives, but that nowadays we are served a good portion of the same thing every day (= social bubble).</p>
+<p> A social bubble is the result of a personalized search using algorithms (for further explanation of algorithms, see the section “How do social bubbles arise”). Based on search history, purchasing behavior, locations, e-mail traffic, messages on social media platforms such as Facebook, etc., a profile of someone is sketched. Such a profile includes the preferences and interests of the person. In this way networks can offer targeted advertisements and YouTube can, for example, also suggest more targeted videos. The result of this is that many people end up in a so-called bubble, hence the term social bubble. Such a so-called filter bubble occurs when someone does not use sources outside the filtered offer.
+Giving an example:</p>
+<p>Two friends search the Google search engine for the term “Italy”. Both get different search results. This is because they have both built up a different “profile”. For example, one friend is mainly shown tourist attractions, while the other friend is mainly offered information about the political situation in Italy</p>
 
-	<h2 style= "colour black"> What is a social bubble?</h2>
-	The term “social bubble”, also called filter bubble, is a term introduced by Mr. Pariser. The internet activist used this term in the book “The filter bubble” he wrote. In this book, he wrote about the concerns he had about filter bubbles that appear in search engines and social networks. For example, he stated that it is crucial for democracy to be able to view things from different perspectives, but that nowadays we are served a good portion of the same thing every day (= social bubble).
-A social bubble is the result of a personalized search using algorithms (for further explanation of algorithms, see the section “How do social bubbles arise”). Based on search history, purchasing behavior, locations, e-mail traffic, messages on social media platforms such as Facebook, etc., a profile of someone is sketched. Such a profile includes the preferences and interests of the person. In this way networks can offer targeted advertisements and YouTube can, for example, also suggest more targeted videos. The result of this is that many people end up in a so-called bubble, hence the term social bubble. Such a so-called filter bubble occurs when someone does not use sources outside the filtered offer.
-Giving an example:
-Two friends search the Google search engine for the term “Italy”. Both get different search results. This is because they have both built up a different “profile”. For example, one friend is mainly shown tourist attractions, while the other friend is mainly offered information about the political situation in Italy
-
-<h2 style= "colour black"> How do social bubbles arise?</h2>
-Social media platforms such as Facebook and YouTube use algorithms. Algorithms can take different forms, it can look like a cooking recipe or like a mathematical formula. But algorithms are often mentioned when it comes to large data sets collected by technology.  Data includes numbers, photos, videos and so on. This data is used as input for algorithms.
-For example, Google performs 3.9 searches per minute, Instagram users post almost 50,000 photos and YouTube plays more than 4.3 million videos. This data is saved and can therefore all be used as input.
-Algorithms also have different functions: prioritize, classify, associate and filter. In the subject of social bubble, algorithms filter your interests. They keep track of what you like to watch in the form of videos, your purchasing behavior, what news you like to follow and there are many more examples.
+<h2> How do social bubbles arise?</h2>
+<p>Social media platforms such as Facebook and YouTube use algorithms. Algorithms can take different forms, it can look like a cooking recipe or like a mathematical formula. But algorithms are often mentioned when it comes to large data sets collected by technology.  Data includes numbers, photos, videos and so on. This data is used as input for algorithms.</p>
+<p>For example, Google performs 3.9 searches per minute, Instagram users post almost 50,000 photos and YouTube plays more than 4.3 million videos. This data is saved and can therefore all be used as input.</p>
+<p>Algorithms also have different functions: prioritize, classify, associate and filter. In the subject of social bubble, algorithms filter your interests. They keep track of what you like to watch in the form of videos, your purchasing behavior, what news you like to follow and there are many more examples.
 In short, algorithms keep track of your viewing and search history, store this data and filter what does not suit your interests.
-To make it clearer how algorithms work, here is an example:
-Someone is mowing his lawn and suddenly his lawn mower breaks. He wants to order a new one and therefore often searches Google to find a perfect and cheap lawn mower. Algorithms store this data and he will therefore see advertisements from lawn mowers on various platforms. You should not only think of advertisements on the side of your screen when you are on the search engine Google, but also, for example, Instagram and so on.
+To make it clearer how algorithms work, here is an example:</p>
+<p>Someone is mowing his lawn and suddenly his lawn mower breaks. He wants to order a new one and therefore often searches Google to find a perfect and cheap lawn mower. Algorithms store this data and he will therefore see advertisements from lawn mowers on various platforms. You should not only think of advertisements on the side of your screen when you are on the search engine Google, but also, for example, Instagram and so on.</p>
 
-<h2 style= "colour black"> How to avoid a social bubble?</h2>
-It is very difficult to avoid this system of algorithm and not end up in a social bubble. This is mainly because it takes place in the background and you are not immediately aware that such a system is sending you in a certain direction. Yet there are several ways to escape the social bubble, here are some tips:
-* Browse anonymously using search engines that do not store personal information such as DuckDuckGo, Ixquick, MetaGer, and Startpage.
-* Surf anonymously using a private window.
-* Turn off your cookies.
-* Teach children information skills. These skills help to search, find, assess and process information.
-* Listen to and read also points of views with which you disagree (dissent). In this way you get to see different perspectives and you do not end up in a so-called bubble.
-* Use the site Fix je Privacy. Here you will find several other tips and you can also read how you can actually achieve this.
+<h2> How to avoid a social bubble?</h2>
+<p>It is very difficult to avoid this system of algorithm and not end up in a social bubble. This is mainly because it takes place in the background and you are not immediately aware that such a system is sending you in a certain direction. Yet there are several ways to escape the social bubble, here are some tips:</p>
 
-<h2 style= "colour black"> Why can a filter bubble be dangerous?</h2>
-Because there is a social bubble, less relevant information, according to the search engine, is filtered for the user. A social bubble that has been personalized provides you with information that seems relevant to you. This is determined by the information you are looking for and find interesting.
+	<ul>
+  	<li>Browse anonymously using search engines that do not store personal information such as DuckDuckGo, Ixquick, MetaGer, and Startpage.</li>
+		<li>Surf anonymously using a private window.</li>
+		<li>Teach children information skills. These skills help to search, find, assess and process information.</li>
+		<li>Listen to and read also points of views with which you disagree (dissent). In this way you get to see different perspectives and you do not end up in a so-called bubble.</li>
+		<li>Use the site 'Fix je Privacy'. Here you will find several other tips and you can also read how you can actually achieve this.</li>	
+	</ul>
+
+<h2> Why can a filter bubble be dangerous?</h2>
+<p>Because there is a social bubble, less relevant information, according to the search engine, is filtered for the user. A social bubble that has been personalized provides you with information that seems relevant to you. This is determined by the information you are looking for and find interesting.
 Search engines, such as Google, have also become more and more personal over the years. This gives you, for example, completely different search results than someone else.
 You get stuck in a you loop, as Eli Pariser calls it. A you loop is a news circle that has been closed, with platforms such as Facebook and Google in particular determining what you want to watch. These platforms say what you want to hear instead of saying what you need to know. So they have a compelling voice, when actually they have to offer you information, which is important to know for your own expansion of your knowledge about the world. This means you cannot be critical and form an opinion based on different sources.
-The biggest danger is that many people are not even aware of this system of algorithms and do not notice that they are in a social bubble. They don't know that the information they see is filtered. In summary, users are isolated in their own cultural or ideological bubble. 
+The biggest danger is that many people are not even aware of this system of algorithms and do not notice that they are in a social bubble. They don't know that the information they see is filtered. In summary, users are isolated in their own cultural or ideological bubble.</p>
 
 <h2 style= "colour black"> Why do Tech-companies use algorithms? </h2>
-As mentioned earlier, data is stored through the use of algorithms. Targeted advertising or suggestions can be made. The so-called social bubble arises. Tech companies such as Youtube, but also search engines such as Google use this system. Why do they use this and how do they benefit from it?
+<p>As mentioned earlier, data is stored through the use of algorithms. Targeted advertising or suggestions can be made. The so-called social bubble arises. Tech companies such as Youtube, but also search engines such as Google use this system. Why do they use this and how do they benefit from it?
 Platforms such as YouTube enable companies to advertise via YouTube (in this example). These companies that advertise through this route pay for this. In short, for tech companies, collecting data is attractive to advertisers. Those advertisers are willing to pay for this and tech companies make a lot of money with this.
 In addition, the tech companies can sell the collected data to interested parties. These parties can also benefit from this data. Tech companies earn big money with this.
 People don't know that the data collected from them is being sold. Is it ethically responsible what the tech companies do?
-In short, the large tech companies act from a profitable point of view and therefor it is attractive to collect the data and use algorithms.
-
+In short, the large tech companies act from a profitable point of view and therefor it is attractive to collect the data and use algorithms.</p>
+</div>
 </body>
