--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<h1>Social Bubble</h1>
 
-	<ul>
+	<ul class="menu">
   	<li><a class="active" href="index.html">Home</a></li>
   	<li><a href="page2.html">Information</a></li>
   	<li><a href="page3.html">Movie</a></li>
