--- a/page5.html
+++ b/page5.html
@@ -12,10 +12,9 @@
 <body>
 	<h1>Social Bubble</h1>
 	
-	<ul>
+	<ul class="menu">
   	<li><a href="index.html">Home</a></li>
   	<li><a href="page2.html">Information</a></li>
-		
   	<li><a href="page3.html">Movie</a></li>
   	<li><a href="page4.html">Contact</a></li>
 		<li><a class="active"
