--- a/page2.html
+++ b/page2.html
@@ -24,7 +24,25 @@
 	<p>The term “social bubble”, also called filter bubble, is a term introduced by Mr. Pariser. The internet activist used this term in the book “The filter bubble” he wrote. In this book, he wrote about the concerns he had about filter bubbles that appear in search engines and social networks. For example, he stated that it is crucial for democracy to be able to view things from different perspectives, but that nowadays we are served a good portion of the same thing every day (= social bubble).</p>
 <p> A social bubble is the result of a personalized search using algorithms (for further explanation of algorithms, see the section “How do social bubbles arise”). Based on search history, purchasing behavior, locations, e-mail traffic, messages on social media platforms such as Facebook, etc., a profile of someone is sketched. Such a profile includes the preferences and interests of the person. In this way networks can offer targeted advertisements and YouTube can, for example, also suggest more targeted videos. The result of this is that many people end up in a so-called bubble, hence the term social bubble. Such a so-called filter bubble occurs when someone does not use sources outside the filtered offer.
 Giving an example:</p>
-<p>Two friends search the Google search engine for the term “Italy”. Both get different search results. This is because they have both built up a different “profile”. For example, one friend is mainly shown tourist attractions, while the other friend is mainly offered information about the political situation in Italy</p>
+<p>Two friends search the Google search engine for the term “Italy”. Both get different search results. This is because they have both built up a different “profile”. For example, one friend is mainly shown tourist attractions, while the other friend is mainly offered information about the political situation in Italy. Down here is shown a table showing the results of a expiriment. In this expiriment you can see the search results of each of the two friends:</p>
+
+<table border=2 width="60%">
+<tr>
+<th> Friend No. </th>      <th> Search Words </th>   <th> Search Results </th>    
+<tr>
+<td>Friend No.1 </td>      <td>Milk </td>         <td>Shopping list of shops where you can buy milk. </td></tr>
+<tr>
+<td>Friend No.2 </td>      <td>Milk </td>         <td>Information on how milk is made. </td></tr>
+<tr>
+<td>Friend No.1 </td>      <td>Train </td>         <td>Train tickets. </td></tr>
+<tr>
+<td>Friend No.2 </td>      <td>Train </td>         <td>Information on how trains are made & operated. </td></tr>
+<tr>
+<td>Friend No.1 </td>      <td>The Netherlands </td> <td>Information on the capital city, Amsterdam. </td></tr>
+<tr>
+<td>Friend No.2 </td>      <td>The Netherlands </td>  <td>Weather information from The Hague. </td></tr>
+</table>
+
 
 <h2> How do social bubbles arise?</h2>
 <p>Social media platforms such as Facebook and YouTube use algorithms. Algorithms can take different forms, it can look like a cooking recipe or like a mathematical formula. But algorithms are often mentioned when it comes to large data sets collected by technology.  Data includes numbers, photos, videos and so on. This data is used as input for algorithms.</p>
