About Pagina gemaakt.

--- a/page5.html
+++ b/page5.html
@@ -20,4 +20,12 @@
 		<li><a class="active"
 		href="page5.html">About us</a></li>
 	</ul>
+  
+  <P><IMG SRC="lieve.png" WIDTH="100" HEIGHT="100" STYLE="float: left;"> <h2>Lieve Collee</h2>
+ <p>Lieve is een 16-jarig meisje, een gepassioneerde UI/UX designer, die daarnaast ook een beetje kan coderen. Ze zorgt voor een mooi maar innovatief ontwerp voor apps, websites en andere interactieve digitale middelen. Ze heeft een geweldig oog voor detail en is heel perfectionistisch.<p/>
+
+<P><IMG SRC="maurits.png" WIDTH="120" HEIGHT="120" STYLE="float: right;"> <h2> Maurits van Scherpenseel</h2>
+<p> Maurits is een 15-jarige jongen, een net begonnen
+programmeur die veel zin heeft in nieuwe leuke projecten voor klanten. Hij is gespecialliseerd in mooie designs voor uw sites. Zo ziet nooit iets er saai uit. Perfect voor uw site dus!<p/>
+
 </body>
