Favicon zichtbaar & in map

--- a/page4.html
+++ b/page4.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Contact</title>
-  <link rel='icon' href='soap_bubbles_PNG37.png'/>
+  <link rel='icon' href='images/soap_bubbles_PNG37.png'/>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>repl.it</title>
