Hoover gemaakt & opmaak veranderd.

--- a/page2.html
+++ b/page2.html
@@ -26,7 +26,7 @@
 Giving an example:</p>
 <p>Two friends search the Google search engine for the term “Italy”. Both get different search results. This is because they have both built up a different “profile”. For example, one friend is mainly shown tourist attractions, while the other friend is mainly offered information about the political situation in Italy. Down here is shown a table showing the results of a expiriment. In this expiriment you can see the search results of each of the two friends:</p>
 
-<table border=2 width="60%">
+<table border=2 width="100%" class="center">
 <tr>
 <th> Friend No. </th>      <th> Search Words </th>   <th> Search Results </th>    
 <tr>
@@ -55,15 +55,18 @@ To make it clearer how algorithms work, here is an example:</p>
 <h2> How to avoid a social bubble?</h2>
 <p>It is very difficult to avoid this system of algorithm and not end up in a social bubble. This is mainly because it takes place in the background and you are not immediately aware that such a system is sending you in a certain direction. Yet there are several ways to escape the social bubble, here are some tips:</p>
 
-	<ul>
+<dl>
   	<li>Browse anonymously using search engines that do not store personal information such as DuckDuckGo, Ixquick, MetaGer, and Startpage.</li>
 		<li>Surf anonymously using a private window.</li>
-		<li>Teach children information skills. These skills help to search, find, assess and process information.</li>
+		<BR CLEAR=all>
+    <li>Teach children information skills. These skills help to search, find, assess and process information.</li>
 		<li>Listen to and read also points of views with which you disagree (dissent). In this way you get to see different perspectives and you do not end up in a so-called bubble.</li>
 		<li>Use the site 'Fix je Privacy'. Here you will find several other tips and you can also read how you can actually achieve this.</li>	
-	</ul>
+</dl>
 
-<h2> Why can a filter bubble be dangerous?</h2>
+<BR CLEAR=all>
+
+<h2>Why can a filter bubble be dangerous?</h2>
 <p>Because there is a social bubble, less relevant information, according to the search engine, is filtered for the user. A social bubble that has been personalized provides you with information that seems relevant to you. This is determined by the information you are looking for and find interesting.
 Search engines, such as Google, have also become more and more personal over the years. This gives you, for example, completely different search results than someone else.
 You get stuck in a you loop, as Eli Pariser calls it. A you loop is a news circle that has been closed, with platforms such as Facebook and Google in particular determining what you want to watch. These platforms say what you want to hear instead of saying what you need to know. So they have a compelling voice, when actually they have to offer you information, which is important to know for your own expansion of your knowledge about the world. This means you cannot be critical and form an opinion based on different sources.
