--- a/index.html
+++ b/index.html
@@ -19,4 +19,10 @@
   	<li><a href="#Contact">Contact</a></li>
 		<li><a href="#about us">About us</a></li>
 	</ul>
+  
+<h2>Social Bubble</h2>
+<p>Welcome to our website! We're so glad you've found us! On this site you can find information & a movie about social bubbles. If you have any questions you can fill in our contact form. Last, but not least, we also have an about page. Here you can found information about the people who made this site.<p/>
+
+<hr noshade/>
+
 </body>
