--- a/page4.html
+++ b/page4.html
@@ -20,4 +20,28 @@
 		href="page4.html">Contact</a></li>
 		<li><a href="page5.html">About us</a></li>
 	</ul>
+
+<fieldset>
+	<legend>Contact us</legend>
+  <label for="fname">First name:</label><br>
+  <input type="text" id="fname" name="fname" placeholder="First name..."> <br>
+  <label for="lname">Last name:</label><br>
+  <input type="text" id="lname" name="lname" placeholder="Last name..."> <br>
+	<label for="email">E-mail:</label><br>
+	<input type="text" id="email" name="email" placeholder="E-mail..."> <br>
+	<label for="phone">Phonenumber:</label><br>
+  <input type="text" id="phone" name="phone" placeholder="Phonenumber..."> <br>
+
+<label for="browser">Country:</label><br>
+<input list="browsers" name="browser" id="browser" placeholder="Your country..."> <br>
+<input type="submit" value="Submit">
+<datalist id="browsers">
+  <option value="Belgium">
+  <option value="Luxemburg">
+  <option value="France">
+  <option value="Deutschland">
+  <option value="Switzerland">
+	<option value="An other..."
+</datalist>
+</fieldset>
 </body>
