Heel veel verbeterd

--- a/index.html
+++ b/index.html
@@ -2,24 +2,26 @@
 <html>
 <head>
   <title>Social Bubble</title>
-  <link rel='icon' href='images/soap_bubbles_PNG37.png'/>
+  <link rel='icon' href='images/bubble.png'/>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>repl.it</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body>
-	<h1>Social Bubble</h1>
-
+<body class="startpagina">
 	<ul class="menu">
   	<li><a class="active" href="index.html">Home</a></li>
-  	<li><a href="page2.html">Information</a></li>
-  	<li><a href="page3.html">Movie</a></li>
+  	<li><a href="page2.html">Information</a></li> 
+  	<li><a href="page3.html">Video</a></li>
   	<li><a href="page4.html">Contact</a></li>
 		<li><a href="page5.html">About us</a></li>
 	</ul>
-  
-<h2>Social Bubble</h2>
-<p>Welcome to our website! We're so glad you've found us! On this site you can find information & a movie about social bubbles. If you have any questions you can fill in our contact form. Last, but not least, we also have an about page. Here you can found information about the people who made this site.<p/>
+
+
+	<div class="inhoud">
+		<img class="profielfoto" src="images/bubble.png" alt="Bubbel">
+		<h2>Social Bubble</h2>
+		<p>Welcome to our website! We're so glad you've found us! On this site you can find information and a video about social bubbles. If you have any questions you can fill in our contact form. Last, but not least, we also have an "About us" page. Here you can find information about the people who made this site.<p/>
+	</div>
 </body>
