--- a/page2.html
+++ b/page2.html
@@ -2,20 +2,18 @@
 <html>
 <head>
   <title>Information</title>
-  <link rel='icon' href='images/soap_bubbles_PNG37.png'/>
+  <link rel='icon' href='images/bubble.png'/>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>repl.it</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body>
-	<h1>Social Bubble</h1>
-
+<body class="pagina">
 	<ul class="menu">
   	<li><a href="index.html">Home</a></li>
   	<li><a class="active" href="page2.html">Information</a></li>
-  	<li><a href="page3.html">Movie</a></li>
+  	<li><a href="page3.html">Video</a></li>
   	<li><a href="page4.html">Contact</a></li>
 		<li><a href="page5.html">About us</a></li>
 	</ul>
@@ -64,8 +62,6 @@ To make it clearer how algorithms work, here is an example:</p>
 		<li>Use the site 'Fix je Privacy'. Here you will find several other tips and you can also read how you can actually achieve this.</li>	
 </dl>
 
-<BR CLEAR=all>
-
 <h2>Why can a filter bubble be dangerous?</h2>
 <p>Because there is a social bubble, less relevant information, according to the search engine, is filtered for the user. A social bubble that has been personalized provides you with information that seems relevant to you. This is determined by the information you are looking for and find interesting.
 Search engines, such as Google, have also become more and more personal over the years. This gives you, for example, completely different search results than someone else.
@@ -78,5 +74,6 @@ Platforms such as YouTube enable companies to advertise via YouTube (in this exa
 In addition, the tech companies can sell the collected data to interested parties. These parties can also benefit from this data. Tech companies earn big money with this.
 People don't know that the data collected from them is being sold. Is it ethically responsible what the tech companies do?
 In short, the large tech companies act from a profitable point of view and therefor it is attractive to collect the data and use algorithms.</p>
+<img src="images/spreek.tiff" alt="Bubbel">
 </div>
 </body>
