--- a/page3.html
+++ b/page3.html
@@ -2,24 +2,24 @@
 <html>
 <head>
   <title>Movie</title>
-  <link rel='icon' href='images/soap_bubbles_PNG37.png'/>
+  <link rel='icon' href='images/bubble.png'/>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>repl.it</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body>
-	<h1>Social Bubble</h1>
-	
+<body class="pagina">
 	<ul class="menu">
   	<li><a href="index.html">Home</a></li>
   	<li><a href="page2.html">Information</a></li>
-  	<li><a class="active" href="page3.html">Movie</a></li>
+  	<li><a class="active" href="page3.html">Video</a></li>
   	<li><a href="page4.html">Contact</a></li>
 		<li><a href="page5.html">About us</a></li>
 	</ul>
 
-<iframe width="1424" height="850" src="https://www.youtube.com/embed/pT-k1kDIRnw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<div class="inhoud">
+	<iframe src="https://www.youtube.com/embed/pT-k1kDIRnw" allowfullscreen></iframe>
+</div>
 
 </body>
