--- a/page4.html
+++ b/page4.html
@@ -2,27 +2,24 @@
 <html>
 <head>
   <title>Contact</title>
-  <link rel='icon' href='images/soap_bubbles_PNG37.png'/>
+  <link rel='icon' href='images/bubble.png'/>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>repl.it</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body>
-	<h1>Social Bubble</h1>
-	
+<body class="pagina">
 	<ul class="menu">
   	<li><a href="index.html">Home</a></li>
   	<li><a href="page2.html">Information</a></li>	
-  	<li><a href="page3.html">Movie</a></li>
+  	<li><a href="page3.html">Video</a></li>
   	<li><a class="active"
 		href="page4.html">Contact</a></li>
 		<li><a href="page5.html">About us</a></li>
 	</ul>
 
 <fieldset>
-	<legend>Contact us</legend>
   <label for="fname">First name:</label><br>
   <input type="text" id="fname" name="fname" placeholder="First name..."> <br>
   <label for="lname">Last name:</label><br>
@@ -39,7 +36,7 @@
   <option value="Belgium">
   <option value="Luxemburg">
   <option value="France">
-  <option value="Deutschland">
+  <option value="Germany">
   <option value="Switzerland">
 	<option value="An other..."
 </datalist>
