--- a/page5.html
+++ b/page5.html
@@ -2,30 +2,36 @@
 <html>
 <head>
   <title>About us</title>
-  <link rel='icon' href='images/soap_bubbles_PNG37.png'/>
+  <link rel='icon' href='images/bubble.png'/>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>repl.it</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body>
-	<h1>Social Bubble</h1>
-	
+<body class="pagina">	
 	<ul class="menu">
   	<li><a href="index.html">Home</a></li>
   	<li><a href="page2.html">Information</a></li>
-  	<li><a href="page3.html">Movie</a></li>
+  	<li><a href="page3.html">Video</a></li>
   	<li><a href="page4.html">Contact</a></li>
 		<li><a class="active"
 		href="page5.html">About us</a></li>
 	</ul>
   
- <h2>Lieve Collee</h2>
- <p>Lieve is een 16-jarig meisje, een gepassioneerde UI/UX designer, die daarnaast ook een beetje kan coderen. Ze zorgt voor een mooi maar innovatief ontwerp voor apps, websites en andere interactieve digitale middelen. Ze heeft een geweldig oog voor detail en is heel perfectionistisch.<p/>
-
-<h2> Maurits van Scherpenseel</h2>
-<p> Maurits is een 15-jarige jongen, een net begonnen
-programmeur die veel zin heeft in nieuwe leuke projecten voor klanten. Hij is gespecialliseerd in mooie designs voor uw sites. Zo ziet nooit iets er saai uit. Perfect voor uw site dus!<p/>
+<div class="inhoud">
+	<div class="about">
+ 		<img class="profielfoto" src="images/lieve.png" alt="Lieve Collee">
+		<h2>Lieve Collee</h2>
+ 		<p>Lieve is een 16-jarig meisje, een gepassioneerde UI/UX designer, die daarnaast ook een beetje kan coderen. Ze zorgt voor een mooi maar innovatief ontwerp voor apps, websites en andere interactieve digitale middelen. Ze heeft een geweldig oog voor detail en is heel perfectionistisch.<p/>
+		<br />
+	</div>
+	<div class="about">
+		<img class="profielfoto" src="images/maurits.png" alt="Maurits van Scherpenseel">
+		<h2> Maurits van Scherpenseel</h2>
+		<p> Maurits is een 15-jarige jongen, een net begonnen
+		programmeur die veel zin heeft in nieuwe leuke projecten voor klanten. Hij is gespecialliseerd in mooie designs voor uw sites. Zo ziet nooit iets er saai uit. Perfect voor uw site dus!<p/>
+	</div>
+</div>
 
 </body>
