--- a/page4.html
+++ b/page4.html
@@ -18,8 +18,8 @@
 		href="page4.html">Contact</a></li>
 		<li><a href="page5.html">About us</a></li>
 	</ul>
-
-<fieldset>
+	<div class="inhoud">
+		<fieldset>
   <label for="fname">First name:</label><br>
   <input type="text" id="fname" name="fname" placeholder="First name..."> <br>
   <label for="lname">Last name:</label><br>
@@ -40,5 +40,6 @@
   <option value="Switzerland">
 	<option value="An other..."
 </datalist>
-</fieldset>
+		</fieldset>
+	<div>
 </body>
