Ik heb een de layout van de contactpagina veranderd en een stuk tekst erbij toegevoegd.

--- a/page2.html
+++ b/page2.html
@@ -41,7 +41,6 @@ Giving an example:</p>
 <td>Friend No.2 </td>      <td>The Netherlands </td>  <td>Weather information from The Hague. </td></tr>
 </table>
 
-
 <h2> How do social bubbles arise?</h2>
 <p>Social media platforms such as Facebook and YouTube use algorithms. Algorithms can take different forms, it can look like a cooking recipe or like a mathematical formula. But algorithms are often mentioned when it comes to large data sets collected by technology.  Data includes numbers, photos, videos and so on. This data is used as input for algorithms.</p>
 <p>For example, Google performs 3.9 searches per minute, Instagram users post almost 50,000 photos and YouTube plays more than 4.3 million videos. This data is saved and can therefore all be used as input.</p>
@@ -49,6 +48,7 @@ Giving an example:</p>
 In short, algorithms keep track of your viewing and search history, store this data and filter what does not suit your interests.
 To make it clearer how algorithms work, here is an example:</p>
 <p>Someone is mowing his lawn and suddenly his lawn mower breaks. He wants to order a new one and therefore often searches Google to find a perfect and cheap lawn mower. Algorithms store this data and he will therefore see advertisements from lawn mowers on various platforms. You should not only think of advertisements on the side of your screen when you are on the search engine Google, but also, for example, Instagram and so on.</p>
+<img src="images/lopen.tiff" alt="Bubbel">
 
 <h2> How to avoid a social bubble?</h2>
 <p>It is very difficult to avoid this system of algorithm and not end up in a social bubble. This is mainly because it takes place in the background and you are not immediately aware that such a system is sending you in a certain direction. Yet there are several ways to escape the social bubble, here are some tips:</p>
@@ -61,12 +61,15 @@ To make it clearer how algorithms work, here is an example:</p>
 		<li>Listen to and read also points of views with which you disagree (dissent). In this way you get to see different perspectives and you do not end up in a so-called bubble.</li>
 		<li>Use the site 'Fix je Privacy'. Here you will find several other tips and you can also read how you can actually achieve this.</li>	
 </dl>
+<BR CLEAR=all>
+<img src="images/gevangen.tiff" alt="Bubbel">
 
 <h2>Why can a filter bubble be dangerous?</h2>
 <p>Because there is a social bubble, less relevant information, according to the search engine, is filtered for the user. A social bubble that has been personalized provides you with information that seems relevant to you. This is determined by the information you are looking for and find interesting.
 Search engines, such as Google, have also become more and more personal over the years. This gives you, for example, completely different search results than someone else.
 You get stuck in a you loop, as Eli Pariser calls it. A you loop is a news circle that has been closed, with platforms such as Facebook and Google in particular determining what you want to watch. These platforms say what you want to hear instead of saying what you need to know. So they have a compelling voice, when actually they have to offer you information, which is important to know for your own expansion of your knowledge about the world. This means you cannot be critical and form an opinion based on different sources.
 The biggest danger is that many people are not even aware of this system of algorithms and do not notice that they are in a social bubble. They don't know that the information they see is filtered. In summary, users are isolated in their own cultural or ideological bubble.</p>
+<img src="images/danger.tiff" alt="Bubbel">
 
 <h2 style= "colour black"> Why do Tech-companies use algorithms? </h2>
 <p>As mentioned earlier, data is stored through the use of algorithms. Targeted advertising or suggestions can be made. The so-called social bubble arises. Tech companies such as Youtube, but also search engines such as Google use this system. Why do they use this and how do they benefit from it?
