--- a/page5.html
+++ b/page5.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>About us</title>
-  <link rel='icon' href='images/bubble.png'/>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
-	<title>repl.it</title>
-	<link href="style.css" rel="stylesheet" type="text/css" />
+   <title>About us</title>
+   <link rel='icon' href='images/bubble.png'/>
+	 <meta charset="utf-8">
+	 <meta name="viewport" content="width=device-width">
+	 <title>repl.it</title>
+	 <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body class="pagina">	
@@ -24,14 +24,34 @@
  		<img class="profielfoto" src="images/lieve.png" alt="Lieve Collee">
 		<h2>Lieve Collee</h2>
  		<p>Lieve is een 16-jarig meisje, een gepassioneerde UI/UX designer, die daarnaast ook een beetje kan coderen. Ze zorgt voor een mooi maar innovatief ontwerp voor apps, websites en andere interactieve digitale middelen. Ze heeft een geweldig oog voor detail en is heel perfectionistisch.<p/>
-		<br />
-	</div>
+		</br>
+		</div>
 	<div class="about">
 		<img class="profielfoto" src="images/maurits.png" alt="Maurits van Scherpenseel">
 		<h2> Maurits van Scherpenseel</h2>
 		<p> Maurits is een 15-jarige jongen, een net begonnen
-		programmeur die veel zin heeft in nieuwe leuke projecten voor klanten. Hij is gespecialliseerd in mooie designs voor uw sites. Zo ziet nooit iets er saai uit. Perfect voor uw site dus!<p/>
+		programmeur die veel zin heeft in nieuwe leuke projecten voor klanten. Hij is gespecialliseerd in mooie designs voor uw sites. Zo ziet nooit iets er saai uit. Perfect voor uw site dus!</p>
+		</div>
 	</div>
-</div>
 
+<div class="list">
+		<ol>
+  		<li>The reason why we made this website:</li>
+				<ul>
+  		<li>To inform you what social bubbles are</li>
+  		<li>To inform you how social bubbles arise.</li>
+  		<li>To Inform you how you could protect yourself against it.</li>
+			<li>To inform you why it's important to avoid social bubbles.</li>
+			<li>To inform you why Tech-companies use algorithms.</li>
+			</ul>
+
+			
+  		<li>The reason why we made this website:</li>
+				<ul>
+  		<li>Coding with HTML, CSS and Resposnive design.</li>
+  		<li>We have also learned about the ICT subject "Social Bubble".</li>
+  		<li>How a real website designer goes to work.</li>
+			</ul>
+		</ol>
+		</div>
 </body>
