--- a/page4.html
+++ b/page4.html
@@ -19,26 +19,31 @@
 		<li><a href="page5.html">About us</a></li>
 	</ul>
 	<div class="inhoud">
+		
+<h2 class="intro">Contact us </h2>
+	<p class="intro"> If you have questions about the information on our page or if you want to know more about the subject "Social Bubble", you can contact us on this page by filling in a form. This form will be sent to us and we will contact you as soon as possible and answer your questions.</p>
+		
 		<fieldset>
-  <label for="fname">First name:</label><br>
-  <input type="text" id="fname" name="fname" placeholder="First name..."> <br>
-  <label for="lname">Last name:</label><br>
-  <input type="text" id="lname" name="lname" placeholder="Last name..."> <br>
-	<label for="email">E-mail:</label><br>
-	<input type="text" id="email" name="email" placeholder="E-mail..."> <br>
-	<label for="phone">Phonenumber:</label><br>
-  <input type="text" id="phone" name="phone" placeholder="Phonenumber..."> <br>
+  		<label class="invoerveld" for="fname">First name:</label><br>
+  		<input class="invoerveld"type="text" id="fname" name="fname" placeholder="First name..." required> <br>
+  		<label class="invoerveld" for="lname">Last name:</label><br>
+  		<input class="invoerveld" type="text" id="lname" name="lname" placeholder="Last name..." required> <br>
+			<label class="invoerveld" for="email">E-mail:</label><br>
+			<input class="invoerveld" type="text" id="email" name="email" placeholder="E-mail..." required>
+			<label class="invoerveld" for="phone">Phonenumber:</label><br>
+  		<input class="invoerveld" type="text" id="phone" name="phone" placeholder="Phonenumber..." required> <br>
 
-<label for="browser">Country:</label><br>
-<input list="browsers" name="browser" id="browser" placeholder="Your country..."> <br>
-<input type="submit" value="Submit">
-<datalist id="browsers">
-  <option value="Belgium">
-  <option value="Luxemburg">
-  <option value="France">
-  <option value="Germany">
-  <option value="Switzerland">
-	<option value="An other..."
+			<label for="browser">Country:</label>
+			<input class="invoerveld" list="browsers" name="browser" id="browser" placeholder="Your country..." required> <br>
+			<input class="knop" type="submit" value="Submit">
+
+	<datalist id="browsers">
+  	<option value="Belgium">
+  	<option value="Luxemburg">
+  	<option value="France">
+  	<option value="Germany">
+  	<option value="Switzerland">
+		<option value="An other...">
 </datalist>
 		</fieldset>
 	<div>
